fix: utilizing overflow: clip to make base page layout sticky hero section work properly

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,7 @@
 html,
 body,
 #root {
+  overflow-x: clip;
   height: 100%;
   margin: 0;
   padding: 0;
